Fix last requirements