@@ -2,14 +2,16 @@ package com.example.spring_project.service;
 
 import org.springframework.stereotype.Service;
 import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
+
 import com.example.spring_project.dto.request.UpdateUserRequest;
-import com.example.spring_project.dto.request.DeleteUserRequest;
 import com.example.spring_project.dto.response.UserResponse;
 import com.example.spring_project.mapper.UserMapper;
 import com.example.spring_project.dto.request.UserRequest;
 import com.example.spring_project.model.User;
 import com.example.spring_project.repository.UserRepository;
 
+import java.util.Comparator;
 import java.util.List;
 
 @Service
@@ -18,7 +20,6 @@ public class UserServiceImpl implements UserService<User> {
     private final UserRepository userRepository;
 
     private final UserMapper userMapper;
-
 
     public UserServiceImpl(UserRepository userRepository, UserMapper userMapper) {
         this.userRepository = userRepository;
@@ -35,33 +36,32 @@ public class UserServiceImpl implements UserService<User> {
     }
 
     @Override
-    public UserResponse saveEntity(UserRequest request) {
+    public UserResponse saveEntity(User user) {
 
-        User user = new User();
+        User user_updated = new User();
 
-        user.setId(request.getId());
-        user.setUsername(request.getUsername());
-        user.setPassword(request.getPassword());
-        user.setEmail(request.getEmail());
-        user.setFirstName(request.getFirstName());
-        user.setLastName(request.getLastName());
+        user_updated.setId(user.getId());
+        user_updated.setUsername(user.getUsername());
+        user_updated.setPassword(user.getPassword());
+        user_updated.setEmail(user.getEmail());
+        user_updated.setFirstName(user.getFirstName());
+        user_updated.setLastName(user.getLastName());
 
-        User savedUser = userRepository.save(user);
+        User savedUser = userRepository.save(user_updated);
 
         return userMapper.toResponse(savedUser);
     }
 
     @Override
-    public UserResponse updateEntity(UserRequest request) {
-
-        User existingUser = userRepository.findById(request.getId())
+    public UserResponse updateEntity(int id, User user) {
+        User existingUser = userRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("User not found"));
 
-        existingUser.setUsername(request.getUsername());
-        existingUser.setPassword(request.getPassword());
-        existingUser.setEmail(request.getEmail());
-        existingUser.setFirstName(request.getFirstName());
-        existingUser.setLastName(request.getLastName());
+        existingUser.setUsername(user.getUsername());
+        existingUser.setPassword(user.getPassword());
+        existingUser.setEmail(user.getEmail());
+        existingUser.setFirstName(user.getFirstName());
+        existingUser.setLastName(user.getLastName());
 
         User updatedUser = userRepository.save(existingUser);
 
@@ -69,40 +69,26 @@ public class UserServiceImpl implements UserService<User> {
     }
 
     @Override
-    public void deleteEntityByID(DeleteUserRequest request) {
-
-        if (!userRepository.existsById(request.getId())) {
+    public void deleteEntityByID(int id) {
+        if (!userRepository.existsById(id)) {
             throw new NoSuchElementException("User not found");
         }
 
-        userRepository.deleteById(request.getId());
+        userRepository.deleteById(id);
     }
 
     @Override
-    public UserResponse getById(UserRequest request ) {
-
-        User user = userRepository.findById(request.getId())
+    public UserResponse getById(int Id) {
+        User user = userRepository.findById(Id)
                 .orElseThrow(() -> new NoSuchElementException("User not found"));
 
         return userMapper.toResponse(user);
     }
 
     @Override
-    public UserResponse getByEmail(UserRequest request) {
+    public UserResponse getByEmail(String email) {
 
-        User user = userRepository.getByEmail(request.getEmail());
-
-        if (user == null) {
-            throw new NoSuchElementException("User not found");
-        }
-
-        return userMapper.toResponse(user);
-    }
-
-    @Override
-    public UserResponse getByUsername(UserRequest request) {
-
-        User user = userRepository.getByUsername(request.getUsername());
+        User user = userRepository.getByEmail(email);
 
         if (user == null) {
             throw new NoSuchElementException("User not found");
@@ -112,13 +98,25 @@ public class UserServiceImpl implements UserService<User> {
     }
 
     @Override
-    public List<UserResponse> findTop10ByOrderByUsernameAsc() {
+    public UserResponse getByUsername(String username) {
 
-        return userRepository.findTop10ByOrderByUsernameAsc()
+        User user = userRepository.getByUsername(username);
+
+        if (user == null) {
+            throw new NoSuchElementException("User not found");
+        }
+
+        return userMapper.toResponse(user);
+    }
+
+    @Override
+    public List<UserResponse> findTop10ByOrderByUsernameAsc(String username) {
+        return userRepository.findByUsernameContainingIgnoreCase(username)
                 .stream()
-                .map(userMapper::toResponse)
+                .sorted(Comparator.comparing(User::getUsername, String.CASE_INSENSITIVE_ORDER))
                 .limit(10)
-                .toList();
+                .map(userMapper::toResponse)
+                .collect(Collectors.toList());
 
     }
 
@@ -129,14 +127,14 @@ public class UserServiceImpl implements UserService<User> {
     }
 
     @Override
-    public UserResponse updateEmailById(UpdateUserRequest request) {
+    public UserResponse updateEmailById(int id, User user) {
 
-        User user = userRepository.findById(request.getId())
+        User existingUser = userRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("User not found"));
 
-        user.setEmail(request.getEmail());
+        existingUser.setEmail(user.getEmail());
 
-        User updatedUser = userRepository.save(user);
+        User updatedUser = userRepository.save(existingUser);
 
         return userMapper.toResponse(updatedUser);
     }
